--- a/src/main/resources/view/clothifyHome.fxml
+++ b/src/main/resources/view/clothifyHome.fxml
@@ -12,19 +12,19 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.clothifyHomeController">
    <children>
-      <ImageView fitHeight="808.0" fitWidth="1250.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="808.0" fitWidth="1216.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../img/2.jpg" />
          </image>
       </ImageView>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#7ecda778" height="812.0" layoutX="-4.0" layoutY="-3.0" stroke="TRANSPARENT" strokeType="INSIDE" width="378.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0000008e" height="808.0" layoutX="374.0" layoutY="-1.0" stroke="TRANSPARENT" strokeType="INSIDE" width="837.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#0000008e" height="808.0" layoutX="374.0" layoutY="-1.0" stroke="TRANSPARENT" strokeType="INSIDE" width="840.0" />
       <Text fill="WHITE" layoutX="74.0" layoutY="45.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Clothify    Store" wrappingWidth="219.46993255615234">
          <font>
             <Font name="Broadway" size="47.0" />
          </font>
       </Text>
-      <Button layoutX="43.0" layoutY="124.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="284.0" style="-fx-background-color: green;" text="Order" textFill="WHITE">
+      <Button layoutX="43.0" layoutY="124.0" mnemonicParsing="false" onAction="#OrderbtnClothifyHome" prefHeight="52.0" prefWidth="284.0" style="-fx-background-color: green;" text="Order" textFill="WHITE">
          <font>
             <Font size="25.0" />
          </font>
@@ -99,7 +99,7 @@
             <Image url="@../img/calculator (2).png" />
          </image>
       </ImageView>
-      <JFXButton layoutX="937.0" layoutY="671.0" onAction="#logoutbtnHomeform" opacity="0.95" prefHeight="51.0" prefWidth="165.0" style="-fx-background-color: white;" text="    Log out">
+      <JFXButton layoutX="967.0" layoutY="691.0" onAction="#logoutbtnHomeform" opacity="0.95" prefHeight="51.0" prefWidth="165.0" style="-fx-background-color: white;" text="    Log out">
          <font>
             <Font name="Arial Rounded MT Bold" size="24.0" />
          </font>
@@ -119,29 +119,34 @@
             <Font name="Britannic Bold" size="35.0" />
          </font>
       </Text>
-      <Circle fill="DODGERBLUE" layoutX="501.0" layoutY="586.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#ebf221" layoutX="654.0" layoutY="586.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#e75454" layoutX="808.0" layoutY="588.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Circle fill="#1fff29" layoutX="967.0" layoutY="588.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
-      <Text fill="WHITE" layoutX="526.0" layoutY="596.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Other" wrappingWidth="98.93667602539062">
+      <Circle fill="DODGERBLUE" layoutX="531.0" layoutY="606.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fill="#ebf221" layoutX="684.0" layoutY="606.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fill="#e75454" layoutX="838.0" layoutY="608.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
+      <Circle fill="#1fff29" layoutX="997.0" layoutY="608.0" radius="13.0" stroke="BLACK" strokeType="INSIDE" />
+      <Text fill="WHITE" layoutX="556.0" layoutY="616.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Other" wrappingWidth="98.93667602539062">
          <font>
             <Font size="25.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="837.0" layoutY="598.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ladies" wrappingWidth="98.93667602539062">
+      <Text fill="WHITE" layoutX="867.0" layoutY="618.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ladies" wrappingWidth="98.93667602539062">
          <font>
             <Font size="25.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="682.0" layoutY="595.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mens" wrappingWidth="98.93667602539062">
+      <Text fill="WHITE" layoutX="712.0" layoutY="615.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mens" wrappingWidth="98.93667602539062">
          <font>
             <Font size="25.0" />
          </font>
       </Text>
-      <Text fill="WHITE" layoutX="993.0" layoutY="600.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kids" wrappingWidth="98.93667602539062">
+      <Text fill="WHITE" layoutX="1023.0" layoutY="620.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kids" wrappingWidth="98.93667602539062">
          <font>
             <Font size="25.0" />
          </font>
       </Text>
+      <ImageView fitHeight="458.0" fitWidth="481.0" layoutX="556.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/pie-chart 1.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
