--- a/src/main/resources/view/item.fxml
+++ b/src/main/resources/view/item.fxml
@@ -1,14 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.TreeTableColumn?>
+<?import javafx.scene.control.TreeTableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.controller.ItemController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.controller.ItemController">
+   <children>
+      <ImageView fitHeight="808.0" fitWidth="1250.0" layoutY="-3.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/2.jpg" />
+         </image>
+      </ImageView>
+      <Rectangle arcHeight="50.0" arcWidth="50.0" fill="#ffffff78" height="747.0" layoutX="31.0" layoutY="32.0" stroke="#00000021" strokeType="INSIDE" width="1151.0" />
+      <JFXButton layoutX="53.0" layoutY="50.0" onAction="#BackbtnItemForm" prefHeight="46.0" prefWidth="141.0" style="-fx-background-color: black;" text="  Back" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </JFXButton>
+      <ImageView fitHeight="35.0" fitWidth="36.0" layoutX="60.0" layoutY="57.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Vector.png" />
+         </image>
+      </ImageView>
+      <Text layoutX="57.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Item code*  :" wrappingWidth="133.07007598876953">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="56.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Supplier Id*  :" wrappingWidth="147.8025188446045">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="56.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description *  :" wrappingWidth="151.20340728759766">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="56.0" layoutY="337.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Qty*  :" wrappingWidth="70.13672637939453">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="57.0" layoutY="392.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Buying price*  :" wrappingWidth="154.40335845947266">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="711.0" layoutY="173.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Selling price*  :" wrappingWidth="151.00253105163574">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="711.0" layoutY="226.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Type*  :" wrappingWidth="80.60256767272949">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="711.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Size*  :" wrappingWidth="71.00253105163574">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <Text layoutX="710.0" layoutY="338.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pofit*  :" wrappingWidth="77.40249443054199">
+         <font>
+            <Font size="23.0" />
+         </font>
+      </Text>
+      <JFXButton layoutX="571.0" layoutY="384.0" prefHeight="46.0" prefWidth="116.0" style="-fx-background-color: black;" text="Print" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="720.0" layoutY="384.0" prefHeight="46.0" prefWidth="116.0" style="-fx-background-color: black;" text="Clear" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="869.0" layoutY="384.0" prefHeight="46.0" prefWidth="116.0" style="-fx-background-color: black;" text="Save" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </JFXButton>
+      <JFXButton layoutX="1013.0" layoutY="384.0" prefHeight="46.0" prefWidth="142.0" style="-fx-background-color: black;" text="Add Stock" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </JFXButton>
+      <TreeTableView layoutX="48.0" layoutY="449.0" prefHeight="313.0" prefWidth="1110.0">
+        <columns>
+          <TreeTableColumn prefWidth="85.86665725708008" text="Item code " />
+          <TreeTableColumn prefWidth="158.93331909179688" text="Discription" />
+            <TreeTableColumn prefWidth="87.46670532226562" text="Qty" />
+            <TreeTableColumn prefWidth="132.53326416015625" text="Selling price" />
+            <TreeTableColumn prefWidth="136.79998779296875" text="Buying price" />
+            <TreeTableColumn prefWidth="106.40008544921875" text="Size" />
+            <TreeTableColumn prefWidth="107.4666748046875" text="Type" />
+            <TreeTableColumn prefWidth="99.46661376953125" text="Profit" />
+            <TreeTableColumn prefWidth="103.20001220703125" text="Supplier ID" />
+            <TreeTableColumn prefWidth="101.333251953125" text="Option" />
+        </columns>
+      </TreeTableView>
+      <JFXTextField layoutX="197.0" layoutY="143.0" prefHeight="46.0" prefWidth="345.0" promptText="Item code">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField layoutX="206.0" layoutY="200.0" prefHeight="46.0" prefWidth="337.0" promptText="Supplier id">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField layoutX="217.0" layoutY="251.0" prefHeight="46.0" prefWidth="326.0" promptText="Discription">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField layoutX="129.0" layoutY="307.0" prefHeight="46.0" prefWidth="173.0" promptText="QTY">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField layoutX="217.0" layoutY="363.0" prefHeight="46.0" prefWidth="235.0" promptText="Buying price">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField layoutX="869.0" layoutY="143.0" prefHeight="46.0" prefWidth="254.0" promptText="Selling price">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField layoutX="795.0" layoutY="195.0" prefHeight="46.0" prefWidth="220.0" promptText="Type">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField layoutX="784.0" layoutY="250.0" prefHeight="46.0" prefWidth="232.0" promptText="Size">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+      <JFXTextField layoutX="788.0" layoutY="307.0" prefHeight="46.0" prefWidth="230.0" promptText="Profit">
+         <font>
+            <Font size="21.0" />
+         </font>
+      </JFXTextField>
+   </children>
 </AnchorPane>
